# secure-auth

./: Cargo.toml  README.md
locales/: ar-AE.ftl  de-DE.ftl  en-US.ftl  es-ES.ftl  fa-IR.ftl  fr-FR.ftl  ja-JP.ftl  ru-RU.ftl  tr-TR.ftl
src/: main.rs
src/db/: database.rs
src/handlers/: auth.rs
src/middlewares/: jwt.rs  mod.rs  permissions.rs  rate_limiter.rs
src/models/: communication.rs  mod.rs  privacy.rs  user.rs
src/routes/: mod.rs  v1.rs
src/routes/v1/: auth.rs  root.rs
src/services/: localization.rs  mod.rs
src/services/auth/: permissions.rs  roles.rs
src/utils/: crypto.rs  email.rs  jwt.rs  mfa.rs  mod.rs  oauth.rs  permissions.rs  risk_assessment.rs  txt.rs  verification.rs
