[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono= "0.4.38"
futures= "0.3.30"
lettre= "0.11.7" # FOR EMAILS