[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
oauth2 = "4.4.2" 
futures = "0.3.30"
otpauth = "0.4.1"
qrcode = "0.14.0"
lettre= "0.11.7" # FOR EMAILS
rand = "0.8.3" #Secret Storage
aes = "0.8.4" #Secret Storage
cipher = "0.4"
block-padding = "0.3"
cbc = "0.1"
generic-array = "1.0.0"
base64 = "0.22.1"
regex = "1.10.4"
thiserror = "1.0"
env_logger = "0.11.3"
log="0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
fluent = "0.16.1"
fluent-bundle = "0.15.3"
unic-langid = { version = "0.9.0", features = ["macros"] }


